<?xml version='1.0' encoding='ASCII'?>
<package>
  <name>i5_a3_ik_fast</name>
  <version>0.0.0</version>
  <description>The i5_a3_ik_fast package</description>
  <maintainer email="liufang@i5cnc.com">Liu Fang</maintainer>
  <license>BSD</license>
  <author email="liufang@i5cnc.com">Liu Fang</author>
  <buildtool_depend>catkin</buildtool_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <moveit_core plugin="${prefix}/i5_a3_manipulator_moveit_ikfast_plugin_description.xml"/>
  </export>
  <build_depend>moveit_core</build_depend>
  <build_depend>liblapack-dev</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>pluginlib</build_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>liblapack-dev</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>pluginlib</run_depend>
</package>
