<?xml version="1.0"?>
<package>
  <name>i5_a3_support</name>
  <version>0.0.0</version>
  <description>The i5_a3_support package</description>
  <maintainer email="liufang@i5cnc.com">Liu Fang</maintainer>
  <license>BSD</license>
  <author email="liufang@i5cnc.com">Liu Fang</author>


  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>i5_resources</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
