<?xml version="1.0"?>
<package>
  <name>i5_driver</name>
  <version>0.0.1</version>
  <description>The i5_driver package</description>

  <maintainer email="liufang@i5cnc.com">Liu Fang</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>
  <author email="liufang@i5cnc.com">Liu Fang</author> -->


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>industrial_robot_client</build_depend>
  <build_depend>i5_msgs</build_depend>
  <run_depend>i5_msgs</run_depend>
  <run_depend>industrial_robot_client</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
