<?xml version="1.0"?>
<package>
  <name>i5_resources</name>
  <version>0.0.0</version>
  <description>The i5_resources package</description>
  <maintainer email="liufang@i5cnc.com">Liu Fang</maintainer>
  <license>BSD</license>
  <author email="liufang@i5cnc.com">Liu Fang</author>


  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
